--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -113,7 +113,7 @@
         tools:layout="@layout/fragment_appearance" />
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.subhajitrajak.durare.ui.settings.general.AccountFragment"
+        android:name="com.subhajitrajak.durare.ui.settings.general.account.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
     <fragment
