--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -5,5 +5,6 @@
     <gradient
         android:angle="90"
         android:endColor="@android:color/transparent"
+        android:centerColor="@color/semi_transparent_white"
         android:startColor="@color/white" />
 </shape>
