--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FFFFFFFF</color>
     <color name="white">#FF000000</color>
+    <color name="semi_transparent_white">#80000000</color>
     <color name="very_dark_grey">#E6E6E6</color>
     <color name="dark_grey_85">#D9D9D9</color>
     <color name="dark_grey">#C0C0C0</color>
