--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="semi_transparent_white">#CBFFFFFF</color>
     <color name="very_light_grey">#E6E6E6</color>
     <color name="light_grey_85">#D9D9D9</color>
     <color name="light_grey">#C0C0C0</color>
