--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -64,7 +64,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         app:itemActiveIndicatorStyle="@style/ShapeAppearance.Material3.Corner.None"
         app:itemIconTint="@color/bottom_nav"
@@ -82,6 +82,7 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/primary"
         app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_nav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/bottom_nav"
         app:shapeAppearanceOverlay="@style/StartButtonShape"
