--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -143,13 +143,15 @@
 
                 <TextView
                     android:id="@+id/description1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/special_gothic_regular"
                     android:text="@string/set_an_alarm_to_stay_consistent"
                     android:textColor="@color/grey"
+                    android:layout_marginEnd="16dp"
                     android:textSize="11sp"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/cardView5"
                     app:layout_constraintStart_toStartOf="@+id/title1"
                     app:layout_constraintTop_toBottomOf="@+id/title1" />
 
