--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/special_gothic_expanded_bold"
-            android:text="@string/account_information1"
+            android:text="@string/manage_profiles1"
             android:textColor="@color/black"
             android:textSize="24sp" />
 
