--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -203,7 +203,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:contentDescription="@string/account_information"
+                android:contentDescription="@string/manage_profiles"
                 android:src="@drawable/account_information"
                 app:tint="@color/dark_grey" />
 
@@ -213,13 +213,13 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="8dp"
                 android:layout_weight="1"
-                android:text="@string/account_information"
+                android:text="@string/manage_profiles"
                 android:textColor="@color/dark_grey" />
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:contentDescription="@string/account_information"
+                android:contentDescription="@string/manage_profiles"
                 android:src="@drawable/arrow_right"
                 app:tint="@color/dark_grey" />
 
@@ -234,7 +234,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:contentDescription="@string/personalize"
+                android:contentDescription="@string/workout_settings"
                 android:src="@drawable/personalize"
                 app:tint="@color/dark_grey" />
 
@@ -244,13 +244,13 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="8dp"
                 android:layout_weight="1"
-                android:text="@string/personalize"
+                android:text="@string/workout_settings"
                 android:textColor="@color/dark_grey" />
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:contentDescription="@string/personalize"
+                android:contentDescription="@string/workout_settings"
                 android:src="@drawable/arrow_right"
                 app:tint="@color/dark_grey" />
 
@@ -265,7 +265,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:contentDescription="@string/appearance"
+                android:contentDescription="@string/themes"
                 android:src="@drawable/settings"
                 app:tint="@color/dark_grey" />
 
@@ -274,14 +274,24 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
-                android:text="@string/appearance"
+                android:text="@string/themes"
+                android:textColor="@color/dark_grey" />
+
+            <TextView
+                android:id="@+id/currentThemeProfile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="8dp"
+                android:text="@string/light"
                 android:textColor="@color/dark_grey" />
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:contentDescription="@string/appearance"
+                android:contentDescription="@string/themes"
                 android:src="@drawable/arrow_right"
                 app:tint="@color/dark_grey" />
 
